[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/game/cursor/Cursor.gd" type="Script" id=1]
[ext_resource path="res://scripts/StateMachine.gd" type="Script" id=2]
[ext_resource path="res://scenes/game/cursor/states/Idle.gd" type="Script" id=3]
[ext_resource path="res://scenes/game/cursor/states/PackagePicked.gd" type="Script" id=4]
[ext_resource path="res://scenes/game/cursor/states/PackagePlacing.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 1, 1 )

[node name="Cursor" type="Area2D"]

modulate = Color( 1, 1, 1, 0.737255 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )

[node name="States" type="Node" parent="." index="1"]

script = ExtResource( 2 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="States"]

script = ExtResource( 3 )

[node name="PackagePicked" type="Node" parent="States" index="1"]

script = ExtResource( 4 )

[node name="PackagePlacing" type="Node" parent="States" index="2"]

script = ExtResource( 5 )

[connection signal="area_entered" from="." to="." method="when_entered"]

[connection signal="area_exited" from="." to="." method="when_exited"]

[connection signal="body_entered" from="." to="." method="when_entered"]

[connection signal="body_exited" from="." to="." method="when_exited"]

[connection signal="click" from="." to="." method="on_event_click"]

[connection signal="enter" from="." to="." method="on_event_enter"]

[connection signal="leave" from="." to="." method="on_event_leave"]

[connection signal="local_move" from="." to="." method="on_event_local_move"]

[connection signal="move" from="." to="." method="on_event_move"]

[connection signal="right_click" from="." to="." method="on_event_right_click"]


